--- a/printing/pubspec.yaml
+++ b/printing/pubspec.yaml
@@ -3,11 +3,14 @@ description: >
   Plugin that allows Flutter apps to generate and print documents to
   compatible printers on Android, iOS, macOS, Windows, and Linux,
   as well as web print.
+
+publish_to: "none"
+
 homepage: https://github.com/DavBfr/dart_pdf/tree/master/printing
 repository: https://github.com/DavBfr/dart_pdf
 issue_tracker: https://github.com/DavBfr/dart_pdf/issues
 screenshots:
-  - description: 'Printing a document on iOS'
+  - description: "Printing a document on iOS"
     path: example.png
 topics:
   - pdf
@@ -31,8 +34,13 @@ dependencies:
   image: ^4.0.02
   js: ">=0.6.3 <1.0.0"
   meta: ">=1.3.0 <2.0.0"
-  pdf: ^3.10.0
-  pdf_widget_wrapper: '>=1.0.0 <2.0.0'
+  pdf:
+    git:
+      url: https://github.com/parthvirani-oceanmtech/dart_pdf.git
+      ref: HEAD
+      resolved-ref: "378571ed8cbe34cb9d6c7c916c36cf211a66e74c"
+      path: pdf
+  pdf_widget_wrapper: ">=1.0.0 <2.0.0"
   plugin_platform_interface: ^2.1.0
 
 dev_dependencies:
